# application

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  make.cmd  makefile  readme.md  vcpkg.json
res/: license.rtf  license.txt  version.h.in
src/: benchmark.cpp  main.cpp  main.manifest  main.rc  test.cpp
src/application/: random.cpp  random.hpp
